[gd_scene load_steps=21 format=3 uid="uid://b020lesiynlbr"]

[ext_resource type="Script" path="res://Scripts/enclosure.gd" id="1_nv64f"]
[ext_resource type="Texture2D" uid="uid://bxvy3xim6yfi4" path="res://Enclosures/9way-tile.png" id="2_iqemd"]
[ext_resource type="Script" path="res://Managers/fence_manager.gd" id="3_guvt6"]
[ext_resource type="PackedScene" uid="uid://c7x3g6837s0x8" path="res://Enclosures/Fences/fence_scene.tscn" id="4_nke03"]
[ext_resource type="Texture2D" uid="uid://bu5wqrxhr2mih" path="res://Enclosures/tiles3.png" id="5_6yduf"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_h25xv"]
vertices = PackedVector2Array(27.4297, 2.28906, 0, 16, -27.4297, 2.28906, 0, -11.4297)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, -11.4286, -27.4286, 2.28572, 0, 16, 27.4286, 2.28572)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_fjsdn"]
vertices = PackedVector2Array(32, 0, 0, 16, -27.4297, 2.28906, 4.57031, -13.7109)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(4.57143, -13.7143, -27.4286, 2.28572, 0, 16, 32, 0)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_ra2x0"]
vertices = PackedVector2Array(32, 0, 4.57031, 13.7109, -22.8594, 0, 4.57031, -13.7109)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(4.57143, -13.7143, -22.8571, 0, 4.57143, 13.7143, 32, 0)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_k6w2w"]
vertices = PackedVector2Array(27.4297, 2.28906, 0, 16, -32, 0, -4.57031, -13.7109)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-4.57143, -13.7143, -32, 0, 0, 16, 27.4286, 2.28572)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_sk8fo"]
vertices = PackedVector2Array(32, 0, 0, 16, -32, 0, 0, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, -16, -32, 0, 0, 16, 32, 0)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_n6xqq"]
vertices = PackedVector2Array(32, 0, 4.57031, 13.7109, -27.4297, -2.28906, 0, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, -16, -27.4286, -2.28571, 4.57143, 13.7143, 32, 0)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_xyvl8"]
vertices = PackedVector2Array(22.8594, 0, -4.57031, 13.7109, -32, 0, -4.57031, -13.7109)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-4.57143, -13.7143, -32, 0, -4.57143, 13.7143, 22.8571, 0)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_6n7o6"]
vertices = PackedVector2Array(27.4297, -2.28906, -4.57031, 13.7109, -32, 0, 0, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, -16, -32, 0, -4.57143, 13.7143, 27.4286, -2.28571)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_omufy"]
vertices = PackedVector2Array(27.4297, -2.28906, 0, 11.4297, -27.4297, -2.28906, 0, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, -16, -27.4286, -2.28571, 0, 11.4286, 27.4286, -2.28571)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2d4kf"]
texture = ExtResource("2_iqemd")
texture_region_size = Vector2i(64, 32)
0:0/0 = 0
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_h25xv")
1:0/0 = 0
1:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_k6w2w")
2:0/0 = 0
2:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_xyvl8")
0:1/0 = 0
0:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_fjsdn")
1:1/0 = 0
1:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_sk8fo")
2:1/0 = 0
2:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_6n7o6")
0:2/0 = 0
0:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_ra2x0")
1:2/0 = 0
1:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_n6xqq")
2:2/0 = 0
2:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_omufy")

[sub_resource type="TileSet" id="TileSet_o4u8v"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(64, 32)
physics_layer_0/collision_layer = 16
physics_layer_0/collision_mask = 0
navigation_layer_0/layers = 2
sources/1 = SubResource("TileSetAtlasSource_2d4kf")

[sub_resource type="NavigationPolygon" id="NavigationPolygon_mv2b7"]
source_geometry_mode = 2
source_geometry_group_name = &"Enclosure"
agent_radius = 1.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_k6c81"]
sample_partition_type = 1
parsed_collision_mask = 4294965247
source_geometry_mode = 2
source_geometry_group_name = &"Enclosure"
cell_size = 10.0
border_size = 10.0
agent_radius = 5.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jqj8t"]
texture = ExtResource("5_6yduf")
texture_region_size = Vector2i(64, 32)
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_1a3nq"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(64, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
sources/1 = SubResource("TileSetAtlasSource_jqj8t")

[node name="EnclosureScene" type="Node2D"]
script = ExtResource("1_nv64f")

[node name="EnclosureTiles" type="TileMapLayer" parent="." groups=["Enclosure"]]
visible = false
tile_set = SubResource("TileSet_o4u8v")
navigation_enabled = false

[node name="LandRegion" type="NavigationRegion2D" parent="." groups=["Enclosure"]]
visible = false
navigation_polygon = SubResource("NavigationPolygon_mv2b7")
use_edge_connections = false
navigation_layers = 2

[node name="WaterRegion" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_k6c81")
use_edge_connections = false
navigation_layers = 4

[node name="EnclosureFenceManager" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("3_guvt6")
fence_scene = ExtResource("4_nke03")

[node name="E" type="TileMapLayer" parent="EnclosureFenceManager"]
texture_filter = 1
tile_set = SubResource("TileSet_1a3nq")
collision_enabled = false

[node name="S" type="TileMapLayer" parent="EnclosureFenceManager"]
texture_filter = 1
tile_set = SubResource("TileSet_1a3nq")
collision_enabled = false

[node name="W" type="TileMapLayer" parent="EnclosureFenceManager"]
texture_filter = 1
tile_set = SubResource("TileSet_1a3nq")
collision_enabled = false

[node name="N" type="TileMapLayer" parent="EnclosureFenceManager"]
texture_filter = 1
tile_set = SubResource("TileSet_1a3nq")
collision_enabled = false

[node name="FenceInstances" type="Node2D" parent="EnclosureFenceManager"]

[node name="VegetationDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4096

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VegetationDetectionArea"]
